--- a/python-geocoder/geocoder.ipynb
+++ b/python-geocoder/geocoder.ipynb
@@ -33,7 +33,7 @@
     "python3 -m venv venv/\n",
     "\n",
     "# On Windows...\n",
-    "c:\\Python36\\python -m venv venv/\n",
+    "python -m venv venv\\\n",
     "```\n",
     "\n",
     "We can activate this virtual environment by running the following at the terminal:\n",
@@ -48,7 +48,7 @@
     "Once we've activated our virtual environment, any packages we install will be specific to this environment---this is very useful for managing packages on a project-by-project basis. We're going to install the `opencage` package, which is a fairly thin wrapper for the OpenCage API (by 'thin wrapper', I just mean that it provides convenience functions without contributing much in the way of added functionality).\n",
     "\n",
     "```sh\n",
-    "pip install opencage\n",
+    "pip install opencage jupyter\n",
     "```"
    ]
   },
