--- a/python-routing/routing.ipynb
+++ b/python-routing/routing.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Building a Routing Application\n",
     "\n",
+    "## [Data for this Exercise is Available Here](http://duspviz.mit.edu/resources/routing_resources.zip)\n",
+    "\n",
     "\n",
     "In today's exercise, we're going to use OpenRouteServices, a free routing and network analysis service, run on open-source software. We have two tasks for the day: 1) to write Python code that will permit us to collect routes from one point to another, and 2) to write Python code that will permit us to collect isochrones for individual points based on transit mode. Isochrones are polygons that depict network distance---in other words, how far can I travel along a road network given a certain amount of time?\n",
     "\n",
