--- a/python-scraping/scraping_websites.ipynb
+++ b/python-scraping/scraping_websites.ipynb
@@ -26,6 +26,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The idea behind webscraping is this: gather data quickly and replicably from websites by taking advantage of the fact that web pages are structured documents. While they are individually idiosyncratic, they tend to be _internally consistent_. This means that web scraping is always a bespoke affair---you can't build a web scraper that will simply work in a generalizable way for all pages. However, there _are_ general principles that, when rehearsed, will allow you to develop a scraper for a given website without too much effort.\n",
+    "\n",
+    "The scraper we're going to build today downloads key information about DUSP faculty from the [DUSP website's 'people' list](http://dusp.mit.edu/people). We're going to scrape information about affiliation, navigate through weblinks, and download photos. Along the way, we'll be doing some neat tricks---naming downloaded photos such that their nomenclature is consistent and dealing with missing and inaccessible information.\n",
+    "\n",
+    "To do this, we'll be using a couple of Python packages. The first is `bs4`, or Beautiful Soup 4. This is an HTML and XML parser which takes a downloaded web page and gives us objects and methods for navigating its structure inuititively. It's a very, very standard tool for use in web scraping applications. We'll also be using `wget` to download files, and `requests` to request webpages.\n",
+    "\n",
+    "As such, the first thing you'll need to do is install these packages. Assuming you've created and activated your virtual environment, you'll want to install these packages using `pip`.\n",
+    "\n",
+    "```sh\n",
+    "pip install requests wget bs4\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -492,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
